# Copyright (C) INFINI Labs & INFINI LIMITED.
#
# The INFINI Loadgen is offered under the GNU Affero General Public License v3.0
# and as commercial software.
#
# For commercial licensing, contact us at:
#   - Website: infinilabs.com
#   - Email: hello@infini.ltd
#
# Open Source licensed under AGPL V3:
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "loadgen"
version = "0.1.0"
edition = "2021"
authors = ["INFINI Labs <hello@infini.ltd>"]
description = "A high-performance HTTP load generator and testing suite"
license = "AGPL-3.0"
homepage = "https://github.com/infinilabs/loadgen"
repository = "https://github.com/infinilabs/loadgen"
keywords = ["load-testing", "http", "benchmark", "performance"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "signal", "rt-multi-thread", "macros"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["gzip", "rustls-tls", "json", "stream"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Roaring bitmap for int_array_bitmap variable type
roaring = "0.10"

# Base64 encoding for bitmap serialization
base64 = "0.22"

# Regex for assertions and DSL parsing
regex = "1"

# Histogram for latency metrics
hdrhistogram = "7"

# Rate limiting
governor = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Synchronization primitives
parking_lot = "0.12"

# Compression
flate2 = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Signal handling (Ctrl+C)
ctrlc = { version = "3", features = ["termination"] }

# Formatting byte sizes
bytesize = "1"

[dev-dependencies]
# Testing utilities
tempfile = "3"
mockito = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
